<resources>
    <string name="app_name">MineSweeper</string>
    <string name="action_settings">Settings</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">You hit a mine.</string>
    <string name="game_over_button">OK</string>
    <string name="new_game">New Game</string>
    <string name="validate">Validate</string>
    <string name="cheat">Cheat</string>
    <string name="game_fail_title">Game Failed</string>
    <string name="game_fail_message">You did not find all the mines.</string>
    <string name="game_fail_button">ok</string>
    <string name="game_success_title">Congratulations!</string>
    <string name="game_success_message">You find all the Mines.</string>
    <string name="game_success_button">OK</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="custom">Customize</string>
    <string name="row_title">Row Number</string>
    <string name="column_title">Column Number</string>
    <string name="mine_title">Mine Number</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="customize_title">Customize Difficult Level</string>
</resources>
