<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MinesweeperActivity">
    <item
        android:id="@+id/action_easy"
        android:orderInCategory="100"
        android:title="@string/easy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_medium"
        android:orderInCategory="100"
        android:title="@string/medium"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hard"
        android:orderInCategory="100"
        android:title="@string/hard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:title="@string/load"
        app:showAsAction="never" />

</menu>
