<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MinesweeperActivityFragment"
    tools:showIn="@layout/activity_minesweeper">

    <LinearLayout
        android:id="@+id/ll_commands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/bt_new"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/board_border"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/new_game"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_validate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/board_border"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/validate"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_cheat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/board_border"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/cheat"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_commands"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/board_bg"
        android:orientation="vertical"
        android:padding="@dimen/board_border" />

</RelativeLayout>
